--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -11,23 +11,18 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
    
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-   <link href="assets/css/ui.css" rel="stylesheet">
-   <link href="assets/css/responsive.css" rel="stylesheet">
   
-   <link href="assets/css/all.min.css" rel="stylesheet">
-   <script src="assets/js/jquery.min.js" type="text/javascript"></script>
-   <script src="assets/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <script src="https://www.paypal.com/sdk/js?client-id=AaxIcXJi8Fca1rip6mevyeMNvV8jGKq90_Iz0Nl738-7qcJNaL7lJ3lAYe0z0G1zgYSolZur8ZOYMz7L&currency=USD"></script>
    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     
-    <title>React App</title>
+      <title>Store Bazaar</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
   </body>
